--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       <li><a href="/02-delegation.html">Делегирование событий</a></li>
       <li><a href="/03-tags.html">Мастерская: теги</a></li>
       <li><a href="/04-colorpicker.html">Мастерская: колорпикер</a></li>
+      <li><a href="01-chatty-events.html">Болтливые события</a></li>
+      <li><a href="02-filter.html">Мастерская: фильтр (поиск)</a></li>
+      <li>
+        <a href="03-lazy-load.html">Мастеркая: ленивая загрузка изображений</a>
+      </li>
+      <li>
+        <a href="04-lazysizes.html">Мастеркая: библиотека lazysizes</a>
+      </li>
     </ul>
   </body>
 </html>
