add throtle and accordion

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       <li>
         <a href="04-lazysizes.html">Мастеркая: библиотека lazysizes</a>
       </li>
+      <li>
+        <a href="accordion.html">Выпадающий список</a>
+      </li>
+      <li>
+        <a href="throtle-and-debonce.html">throtle-and-debonce</a>
+      </li>
     </ul>
   </body>
 </html>
